--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,5 +6,7 @@ services:
       - "8080:8080"
     environment:
       - ENV=development
+      - DATA_DIR=/data
     volumes:
       - ./bootstrap:/app
+      - ./data:/data
