--- a/bootstrap/Dockerfile
+++ b/bootstrap/Dockerfile
@@ -1,13 +1,16 @@
 # Build stage
 FROM golang:1.24-alpine AS builder
 
-WORKDIR /app
+WORKDIR /workspace
 
-COPY go.mod go.sum* ./
+# Copy the entire workspace structure
+COPY shared/ ./shared/
+COPY bootstrap/ ./bootstrap/
+
+# Set working directory to bootstrap for build
+WORKDIR /workspace/bootstrap
 
 RUN go mod download
-
-COPY . .
 
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
 
@@ -17,7 +20,7 @@ RUN apk --no-cache add ca-certificates
 
 WORKDIR /root/
 
-COPY --from=builder /app/main .
+COPY --from=builder /workspace/bootstrap/main .
 
 EXPOSE 8080
 
