--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,7 @@ services:
       - DATA_DIR=/data
     volumes:
       - ./bootstrap:/app
+      - ./shared:/shared
       - ./data:/data
       # Mount Docker socket for container management
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -26,5 +27,6 @@ services:
       - PORT=9090
     volumes:
       - ./client:/app
+      - ./shared:/shared
     depends_on:
       - bootstrap
